--- a/iWork.Web.Api/Web.config
+++ b/iWork.Web.Api/Web.config
@@ -1,11 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=301879
-  -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings></appSettings>
@@ -72,6 +67,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="iWorkEntities" connectionString="metadata=res://*/Models.MainModel.csdl|res://*/Models.MainModel.ssdl|res://*/Models.MainModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="iWorkEntities" connectionString="metadata=res://*/iWorkModel.csdl|res://*/iWorkModel.ssdl|res://*/iWorkModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.16.2.134\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
