--- a/iWork.Web.Api/Web.config
+++ b/iWork.Web.Api/Web.config
@@ -67,6 +67,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="iWorkEntities" connectionString="metadata=res://*/iWorkModel.csdl|res://*/iWorkModel.ssdl|res://*/iWorkModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.16.2.134\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="iWorkEntities" connectionString="metadata=res://*/iWorkModel.csdl|res://*/iWorkModel.ssdl|res://*/iWorkModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
