--- a/iWork.Web.Api/iWork.Web.Api.vbproj
+++ b/iWork.Web.Api/iWork.Web.Api.vbproj
@@ -122,6 +122,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\IController.vb" />
     <Compile Include="Core\Mapper.vb" />
     <Compile Include="Core\WebApiConfig.vb" />
     <Compile Include="ControllerGenerator.vb">
