--- a/iWork.Repository/App.Config
+++ b/iWork.Repository/App.Config
@@ -25,7 +25,7 @@
     </sharedListeners>
   </system.diagnostics>
   <connectionStrings>
-    <add name="iWorkEntities" connectionString="metadata=res://*/iWorkModel.csdl|res://*/iWorkModel.ssdl|res://*/iWorkModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="iWorkEntities" connectionString="metadata=res://*/EF.iWorkModel.csdl|res://*/EF.iWorkModel.ssdl|res://*/EF.iWorkModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
