Adding contact.xml

--- a/iWork.Web.Api/Castle.config
+++ b/iWork.Web.Api/Castle.config
@@ -5,7 +5,7 @@
   </properties>
 
   <components>
-    <component type="System.Data.Entity.DbContext, EntityFramework">
+    <component type="System.Data.Entity.DbContext, EntityFramework" lifestyle="thread">
       <parameters>
         <nameOrConnectionString>#{connectionString}</nameOrConnectionString>
       </parameters>
