--- a/iWork.Web.UI/Web.config
+++ b/iWork.Web.UI/Web.config
@@ -4,10 +4,18 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+        <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
+    </configSections>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-  </system.web>
+  <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
+            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+        </httpModules><httpHandlers>
+            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+        </httpHandlers></system.web>
   <location path="iView">
     <system.webServer>
       <handlers>
@@ -17,7 +25,14 @@
   </location>
   <system.webServer>
     <modules>
-      <add name="iViewHttpModule" type="iView.ViewEngine.iViewHttpModule, iView.ViewEngine"/>
-    </modules>
-  </system.webServer>
-</configuration>
+      <add name="iViewHttpModule" type="iView.ViewEngine.iViewHttpModule, iView.ViewEngine" />
+    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
+  <validation validateIntegratedModeConfiguration="false" /><handlers>
+            <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+        </handlers></system.webServer>
+<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+      <!-- 
+          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
+          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
+      -->
+    </glimpse></configuration>
