Implement Contact complex page

--- a/iWork.Web.UI/iWork.Web.UI.vbproj
+++ b/iWork.Web.UI/iWork.Web.UI.vbproj
@@ -107,6 +107,7 @@
     <Content Include="Content\css\bootstrap.min.css" />
     <Content Include="Content\css\bootswatch.min.css" />
     <Content Include="Content\css\page.css" />
+    <Content Include="Content\js\page.js" />
     <Content Include="Content\lib\bootstrap\css\bootstrap-theme.css" />
     <Content Include="Content\lib\bootstrap\css\bootstrap-theme.min.css" />
     <Content Include="Content\lib\bootstrap\css\bootstrap.css" />
@@ -896,16 +897,20 @@
     <Content Include="Content\Scripts\npm.js" />
     <Content Include="GlimpseSecurityPolicy.cs" />
     <Content Include="iView\Contacts\Contact.xml" />
+    <Content Include="iView\Contacts\list.html" />
     <Content Include="iView\Contacts\ContactsUpdate.html" />
     <Content Include="iView\Contacts\ContactsAdd.html" />
     <Content Include="iView\Contacts\ContactsList.html" />
     <Content Include="Manifest.xml" />
     <Content Include="Template\Default\Controls\button\cancel.html" />
+    <Content Include="Template\Default\Controls\button\update.html" />
+    <Content Include="Template\Default\Controls\button\delete.html" />
     <Content Include="Template\Default\Controls\button\submit.html" />
     <Content Include="Template\Default\Controls\column\td.html" />
     <Content Include="Template\Default\Controls\form\form.html" />
     <Content Include="Template\Default\Controls\grid\table.html" />
     <Content Include="Template\Default\Controls\input\password.html" />
+    <Content Include="Template\Default\Controls\input\search.html" />
     <Content Include="Template\Default\Controls\input\text.html" />
     <Content Include="Template\Default\Controls\label\h1.html" />
     <Content Include="Template\Default\Controls\label\h2.html" />
