Add Castle Windsor dependency injection

--- a/iWork.Web.Api/Web.config
+++ b/iWork.Web.Api/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -65,6 +65,14 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -74,7 +82,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="iWorkEntities" connectionString="metadata=res://*/iWorkModel.csdl|res://*/iWorkModel.ssdl|res://*/iWorkModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="iWorkEntities1" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa1;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
