--- a/iWork.Core/iWork.Core.vbproj
+++ b/iWork.Core/iWork.Core.vbproj
@@ -99,6 +99,8 @@
     <Compile Include="Repository\IGenericRepository.vb" />
     <Compile Include="Repository\IRepository.vb" />
     <Compile Include="Repository\IUnitOfWork.vb" />
+    <Compile Include="Security\AuthorizationInterceptor.vb" />
+    <Compile Include="Security\AuthorizeAttribute.vb" />
     <Compile Include="Service\IService.vb" />
   </ItemGroup>
   <ItemGroup>
