--- a/iWork.Web.Api/Castle.config
+++ b/iWork.Web.Api/Castle.config
@@ -5,11 +5,12 @@
   </properties>
 
   <components>
-    <component type="System.Data.Entity.DbContext, EntityFramework" lifestyle="thread">
+    <component id="FirstDbContext" type="System.Data.Entity.DbContext, EntityFramework" lifestyle="thread">
       <parameters>
         <nameOrConnectionString>#{connectionString}</nameOrConnectionString>
       </parameters>
     </component>
+    <!--<component id="Service" service="iWork.Core.IService, iWork.Core" lifestyle="thread" />-->
   </components>
 
 </configuration>
