Implement Slick View

--- a/iWork.Web.UI/iWork.Web.UI.vbproj
+++ b/iWork.Web.UI/iWork.Web.UI.vbproj
@@ -101,12 +101,14 @@
     <Content Include="Assemblies\iView.ViewEngine.dll" />
     <Content Include="Assemblies\iView.ViewEngine.pdb" />
     <Content Include="Assemblies\iView.ViewEngine.xml" />
-    <Content Include="Content\css\bootstrap-theme.css" />
-    <Content Include="Content\css\bootstrap-theme.min.css" />
-    <Content Include="Content\css\bootstrap.css" />
-    <Content Include="Content\css\bootstrap.min.css" />
-    <Content Include="Content\css\bootswatch.min.css" />
     <Content Include="Content\css\page.css" />
+    <Content Include="Content\font\OpenSans-Regular.svg" />
+    <Content Include="Content\img\add-user.svg" />
+    <Content Include="Content\img\address-book.svg" />
+    <Content Include="Content\img\loading.gif" />
+    <Content Include="Content\img\old-phone.svg" />
+    <Content Include="Content\img\scope.svg" />
+    <Content Include="Content\img\user.svg" />
     <Content Include="Content\js\page.js" />
     <Content Include="Content\lib\bootstrap\css\bootstrap-theme.css" />
     <Content Include="Content\lib\bootstrap\css\bootstrap-theme.min.css" />
@@ -115,28 +117,13 @@
     <Content Include="Content\lib\bootstrap\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\lib\bootstrap\js\bootstrap.js" />
     <Content Include="Content\lib\bootstrap\js\bootstrap.min.js" />
-    <Content Include="Content\Scripts\angular-animate.js" />
-    <Content Include="Content\Scripts\angular-animate.min.js" />
-    <Content Include="Content\Scripts\angular-aria.js" />
-    <Content Include="Content\Scripts\angular-aria.min.js" />
-    <Content Include="Content\Scripts\angular-cookies.js" />
-    <Content Include="Content\Scripts\angular-cookies.min.js" />
-    <Content Include="Content\Scripts\angular-csp.css" />
-    <Content Include="Content\Scripts\angular-loader.js" />
-    <Content Include="Content\Scripts\angular-loader.min.js" />
-    <Content Include="Content\Scripts\angular-messages.js" />
-    <Content Include="Content\Scripts\angular-messages.min.js" />
-    <Content Include="Content\Scripts\angular-mocks.js" />
-    <Content Include="Content\Scripts\angular-resource.js" />
-    <Content Include="Content\Scripts\angular-resource.min.js" />
-    <Content Include="Content\Scripts\angular-route.js" />
-    <Content Include="Content\Scripts\angular-route.min.js" />
-    <Content Include="Content\Scripts\angular-sanitize.js" />
-    <Content Include="Content\Scripts\angular-sanitize.min.js" />
-    <Content Include="Content\Scripts\angular-scenario.js" />
-    <Content Include="Content\Scripts\angular-touch.js" />
-    <Content Include="Content\Scripts\angular-touch.min.js" />
-    <Content Include="Content\Scripts\angular.js" />
+    <Content Include="Content\lib\jquery.svginject.js" />
+    <Content Include="Content\lib\slick\ajax-loader.gif" />
+    <Content Include="Content\lib\slick\fonts\slick.svg" />
+    <Content Include="Content\lib\slick\slick-theme.css" />
+    <Content Include="Content\lib\slick\slick.css" />
+    <Content Include="Content\lib\slick\slick.js" />
+    <Content Include="Content\lib\slick\slick.min.js" />
     <Content Include="Content\Scripts\angular.min.js" />
     <Content Include="Content\Scripts\bootstrap.js" />
     <Content Include="Content\Scripts\bootstrap.min.js" />
@@ -891,6 +878,14 @@
     <Content Include="Content\lib\bootstrap\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\lib\bootstrap\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\lib\bootstrap\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\lib\slick\config.rb" />
+    <Content Include="Content\lib\slick\fonts\slick.eot" />
+    <Content Include="Content\lib\slick\fonts\slick.ttf" />
+    <Content Include="Content\lib\slick\fonts\slick.woff" />
+    <Content Include="Content\lib\slick\slick-theme.scss" />
+    <Content Include="Content\font\OpenSans-Regular.eot" />
+    <Content Include="Content\font\OpenSans-Regular.ttf" />
+    <Content Include="Content\font\OpenSans-Regular.woff" />
     <None Include="Content\Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Content\Scripts\jquery-2.1.1.js" />
     <Content Include="Content\Scripts\jquery-2.1.1.min.js" />
@@ -901,14 +896,20 @@
     <Content Include="iView\Contacts\ContactsUpdate.html" />
     <Content Include="iView\Contacts\ContactsAdd.html" />
     <Content Include="iView\Contacts\ContactsList.html" />
+    <Content Include="iView\include\contactForm.html" />
+    <Content Include="iView\Rollcall\list.html" />
+    <Content Include="iView\Rollcall\Rollcall.xml" />
     <Content Include="Manifest.xml" />
     <Content Include="Template\Default\Controls\button\cancel.html" />
+    <Content Include="Template\Default\Controls\button\add.html" />
+    <Content Include="Template\Default\Controls\button\iconic.html" />
     <Content Include="Template\Default\Controls\button\update.html" />
     <Content Include="Template\Default\Controls\button\delete.html" />
     <Content Include="Template\Default\Controls\button\submit.html" />
     <Content Include="Template\Default\Controls\column\td.html" />
     <Content Include="Template\Default\Controls\form\form.html" />
     <Content Include="Template\Default\Controls\grid\table.html" />
+    <Content Include="Template\Default\Controls\icon\svg.html" />
     <Content Include="Template\Default\Controls\input\password.html" />
     <Content Include="Template\Default\Controls\input\search.html" />
     <Content Include="Template\Default\Controls\input\text.html" />
@@ -916,11 +917,13 @@
     <Content Include="Template\Default\Controls\label\h2.html" />
     <Content Include="Template\Default\Controls\label\h3.html" />
     <Content Include="Template\Default\Controls\label\h4.html" />
+    <Content Include="Template\Default\Controls\modal\modal.html" />
     <Content Include="Template\Default\Controls\panel\panel.html" />
     <Content Include="Template\Default\Controls\row\tr.html" />
     <Content Include="Template\Default\Controls\select\select.html" />
     <Content Include="Template\Default\Controls\view\column.html" />
     <Content Include="Template\Default\Controls\view\row.html" />
+    <Content Include="Template\Default\Controls\view\slik.html" />
     <Content Include="Template\Default\Layout\Default.html" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -954,18 +957,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\css\bootstrap-theme.css.map" />
-    <Content Include="Content\css\bootstrap.css.map" />
-    <Content Include="Content\Scripts\angular-animate.min.js.map" />
-    <Content Include="Content\Scripts\angular-aria.min.js.map" />
-    <Content Include="Content\Scripts\angular-cookies.min.js.map" />
-    <Content Include="Content\Scripts\angular-loader.min.js.map" />
-    <Content Include="Content\Scripts\angular-messages.min.js.map" />
-    <Content Include="Content\Scripts\angular-resource.min.js.map" />
-    <Content Include="Content\Scripts\angular-route.min.js.map" />
-    <Content Include="Content\Scripts\angular-sanitize.min.js.map" />
-    <Content Include="Content\Scripts\angular-touch.min.js.map" />
-    <Content Include="Content\Scripts\angular.min.js.map" />
     <Content Include="Content\Scripts\errors.json" />
     <Content Include="Content\Scripts\jquery-2.1.1.min.map" />
     <Content Include="Content\Scripts\version.json" />
