--- a/iWork.Repository/iWork.Repository.vbproj
+++ b/iWork.Repository/iWork.Repository.vbproj
@@ -71,6 +71,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EF\ContactRepository.vb" />
     <Compile Include="EF\GenericRepository.vb" />
     <Compile Include="EF\iWorkModel.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -78,6 +79,7 @@
       <DependentUpon>iWorkModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="EF\UnitOfWork.vb" />
+    <Compile Include="Interfaces\IContactRepository.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
