--- a/iWork.Core.Web/iWork.Core.Web.vbproj
+++ b/iWork.Core.Web/iWork.Core.Web.vbproj
@@ -86,6 +86,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\BaseController.vb" />
     <Compile Include="Controller\IController.vb" />
     <Compile Include="Controller\RequestIdModel.vb" />
     <Compile Include="Controller\RequestModel.vb" />
@@ -110,6 +111,8 @@
     <Compile Include="Castle\CastleDependencyResolver.vb" />
     <Compile Include="Castle\CastleDependencyScope.vb" />
     <Compile Include="Castle\ControllerInstaller.vb" />
+    <Compile Include="Security\AuthorizationInterceptor.vb" />
+    <Compile Include="Security\AuthorizeAttribute.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
