--- a/iWork.Web.Api/Web.config
+++ b/iWork.Web.Api/Web.config
@@ -85,7 +85,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-        <add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+        <!--<add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
