Implement login page, Fix duplicate request, Add Sass to project, Some layout changes

--- a/iWork.Web.UI/iWork.Web.UI.vbproj
+++ b/iWork.Web.UI/iWork.Web.UI.vbproj
@@ -136,11 +136,23 @@
     <Content Include="Assemblies\iView.ViewEngine.dll" />
     <Content Include="Assemblies\iView.ViewEngine.pdb" />
     <Content Include="Assemblies\iView.ViewEngine.xml" />
-    <Content Include="Content\css\page.css" />
+    <Content Include="Content\css\_helper.css">
+      <DependentUpon>_helper.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\css\_helper.min.css">
+      <DependentUpon>_helper.css</DependentUpon>
+    </Content>
+    <Content Include="Content\css\login.css">
+      <DependentUpon>login.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\css\login.min.css">
+      <DependentUpon>login.css</DependentUpon>
+    </Content>
     <Content Include="Content\font\OpenSans-Regular.svg" />
     <Content Include="Content\img\add-user.svg" />
     <Content Include="Content\img\address-book.svg" />
     <Content Include="Content\img\loading.gif" />
+    <Content Include="Content\img\login-header.png" />
     <Content Include="Content\img\old-phone.svg" />
     <Content Include="Content\img\scope.svg" />
     <Content Include="Content\img\user.svg" />
@@ -156,6 +168,9 @@
     <Content Include="Content\lib\slick\ajax-loader.gif" />
     <Content Include="Content\lib\slick\fonts\slick.svg" />
     <Content Include="Content\lib\slick\slick-theme.css" />
+    <Content Include="Content\lib\slick\slick-theme.min.css">
+      <DependentUpon>slick-theme.css</DependentUpon>
+    </Content>
     <Content Include="Content\lib\slick\slick.css" />
     <Content Include="Content\lib\slick\slick.js" />
     <Content Include="Content\lib\slick\slick.min.js" />
@@ -921,6 +936,12 @@
     <Content Include="Content\font\OpenSans-Regular.eot" />
     <Content Include="Content\font\OpenSans-Regular.ttf" />
     <Content Include="Content\font\OpenSans-Regular.woff" />
+    <Content Include="Content\css\style.css">
+      <DependentUpon>style.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\css\style.min.css">
+      <DependentUpon>style.css</DependentUpon>
+    </Content>
     <Content Include="Controllers\ControllerGenerator.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>ControllerGenerator.vb</LastGenOutput>
@@ -928,6 +949,17 @@
     <Content Include="Castle.config">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\css\login.scss" />
+    <Content Include="Content\css\login.css.map">
+      <DependentUpon>login.css</DependentUpon>
+    </Content>
+    <Content Include="Content\css\_helper.scss" />
+    <Content Include="Content\css\_helper.css.map">
+      <DependentUpon>_helper.css</DependentUpon>
+    </Content>
+    <Content Include="Content\lib\slick\slick-theme.css.map">
+      <DependentUpon>slick-theme.css</DependentUpon>
     </Content>
     <None Include="Content\Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Content\Scripts\jquery-2.1.1.js" />
@@ -940,6 +972,7 @@
     <Content Include="iView\Contacts\ContactsAdd.html" />
     <Content Include="iView\Contacts\ContactsList.html" />
     <Content Include="iView\include\contactForm.html" />
+    <Content Include="iView\login\login.html" />
     <Content Include="iView\Rollcall\list.html" />
     <Content Include="iView\Rollcall\Rollcall.xml" />
     <Content Include="Manifest.xml" />
@@ -949,6 +982,7 @@
     <Content Include="Template\Default\Controls\button\update.html" />
     <Content Include="Template\Default\Controls\button\delete.html" />
     <Content Include="Template\Default\Controls\button\submit.html" />
+    <Content Include="Template\Default\Controls\checkbox\checkbox.html" />
     <Content Include="Template\Default\Controls\column\td.html" />
     <Content Include="Template\Default\Controls\form\form.html" />
     <Content Include="Template\Default\Controls\grid\table.html" />
@@ -961,13 +995,16 @@
     <Content Include="Template\Default\Controls\label\h3.html" />
     <Content Include="Template\Default\Controls\label\h4.html" />
     <Content Include="Template\Default\Controls\modal\modal.html" />
+    <Content Include="Template\Default\Controls\panel\image.html" />
     <Content Include="Template\Default\Controls\panel\panel.html" />
     <Content Include="Template\Default\Controls\row\tr.html" />
     <Content Include="Template\Default\Controls\select\select.html" />
     <Content Include="Template\Default\Controls\view\column.html" />
     <Content Include="Template\Default\Controls\view\row.html" />
     <Content Include="Template\Default\Controls\view\slik.html" />
+    <Content Include="Template\Default\Controls\view\spacer.html" />
     <Content Include="Template\Default\Layout\Default.html" />
+    <Content Include="Template\Default\Layout\login.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -1013,6 +1050,10 @@
     <Content Include="Content\Scripts\errors.json" />
     <Content Include="Content\Scripts\jquery-2.1.1.min.map" />
     <Content Include="Content\Scripts\version.json" />
+    <Content Include="Content\css\style.scss" />
+    <Content Include="Content\css\style.css.map">
+      <DependentUpon>style.css</DependentUpon>
+    </Content>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -1052,6 +1093,7 @@
       <Name>iWork.Service</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
