--- a/iWork.Web.UI/Config/Castle.config
+++ b/iWork.Web.UI/Config/Castle.config
@@ -1,5 +1,7 @@
 ﻿<configuration>
-
+  <!--<facilities>
+    <facility id="loggingfacility" type="Castle.Facilities.Logging.LoggingFacility, Castle.Facilities.Logging" loggingApi="log4net" configFile="logging.config" />
+  </facilities>-->
   <properties>
     <connectionString>iWorkEntities</connectionString>
   </properties>
@@ -10,7 +12,9 @@
         <nameOrConnectionString>#{connectionString}</nameOrConnectionString>
       </parameters>
     </component>
+    <component id="aaa" type="iWork.Core.Web.AuthorizationInterceptor, iWork.Core.Web" lifestyle="thread">
+      
+    </component>
     <!--<component id="Service" service="iWork.Core.IService, iWork.Core" lifestyle="thread" />-->
   </components>
-
 </configuration>
